--- a/index.html
+++ b/index.html
@@ -2,16 +2,35 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8">
+	<link rel="icon" type="image/png" href="img/favico.png">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto:400,400i" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 	<title>Jonatan Lipner Web</title>
 </head>
 <body>
 	<header>
-		
+		<div class="head">
+			<nav>
+				<ul>
+					<li><a href="">Qué</a></li>
+					<li><a href="">Cómo</a></li>
+					<li><a href=""><img src="img/logo.png"></a></li>
+					<li><a href="">Quién</a></li>
+					<li><a href="">Dónde</a></li>
+				</ul>
+			</nav>
+		</div>
 	</header>
 	<div class="container">
 		<div class="introcon">
-			
+			<div class="poemcon">
+				<p>
+					"Cuando oí al docto astrónomo, cuando las pruebas, las figuras, distribuidas en columnas ante mí, cuando me presentaron los gráficos y diagramas para sumarlos, dividirlos y medirlos, cuando sentado oí al astrónomo en la sala de lectura donde daba su conferencia entre muchos aplausos, cuán pronto e inexplicablemente me sentí cansado y harto; hasta que me levanté y me escabullí para deambular por mi cuenta, en el místico aire húmedo de la noche, y de tanto en tanto, contemplaba en perfecto silencio las estrellas."
+				</p>
+			</div>
+			<div class="intro">
+				<h1>NO LE PONGAS MEDIDA A TUS IDEAS</h1>
+			</div>
 		</div>
 		<div class="whocon">
 			<div class="whobox">
@@ -42,7 +61,17 @@
 		</div>
 	</div>
 	<footer>
-	
+		<div class="foot">
+			<div class="footnav">
+				<ul>
+					<li><a href="">Qué</a></li>
+					<li><a href="">Cómo</a></li>
+					<li><a href=""><img src="img/logo.png"></a></li>
+					<li><a href="">Quién</a></li>
+					<li><a href="">Dónde</a></li>
+				</ul>
+			</nav>
+		</div>
 	</footer>
 </body>
 </html> 
