--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 		<div class="head">
 			<nav>
 				<ul>
-					<li><a href="">Qué</a></li>
-					<li><a href="">Cómo</a></li>
-					<li><a href=""><img src="img/logo.png"></a></li>
-					<li><a href="">Quién</a></li>
-					<li><a href="">Dónde</a></li>
+					<li><a href="pages/what.html">Qué</a></li>
+					<li><a href="pages/how.html">Cómo</a></li>
+					<li><a href="index.html"><img src="img/logo.png"></a></li>
+					<li><a href="pages/who.html">Quién</a></li>
+					<li><a href="pages/where.html">Dónde</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -53,7 +53,7 @@
 			<h2>...Y DESARROLLO...</h2>
 			<div class="design-devbox">
 				<div class="desdev-box right">
-					
+				
 				</div>
 			</div>
 			<p>Si querés saber más sobre mis habilidades,<br>
@@ -77,13 +77,13 @@
 		<div class="foot">
 			<div class="footnav">
 				<ul>
-					<li><a href="">Qué</a></li>
-					<li><a href="">Cómo</a></li>
-					<li><a href=""><img src="img/logo.png"></a></li>
-					<li><a href="">Quién</a></li>
-					<li><a href="">Dónde</a></li>
+					<li><a href="pages/what.html">Qué</a></li>
+					<li><a href="pages/how.html">Cómo</a></li>
+					<li><a href="index.html"><img src="img/logo.png"></a></li>
+					<li><a href="pages/who.html">Quién</a></li>
+					<li><a href="pages/where.html">Dónde</a></li>
 				</ul>
-			</nav>
+			</div>
 		</div>
 	</footer>
 </body>
