--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
 		</div>
 		<div class="whobox">
 			<h2>MI NOMBRE ES JONATAN LIPNER...</h2>
-			<p>Soy un diseñador y desarrollador que vive en la Ciudad de Buenos Aires.<br>
-				Me apasionan el diseño y la tecnología, pero también el cine, <br>
-				los cómics, los videojuegos y la literatura.<br>
-				Si querés conocerme mejor, podés preguntarme...
-			</p>
+			<div class="whotext">
+				<p>Soy un diseñador y desarrollador que vive en la Ciudad de Buenos Aires.
+					Me apasionan el diseño y la tecnología, pero también el cine, 
+					los cómics, los videojuegos y la literatura.
+					Si querés conocerme mejor, podés preguntarme...
+				</p>
+			</div>	
 			<a href="#">¿QUIÉN SOY?</a>
 		</div>
 		<div class="howbox">
@@ -70,7 +72,9 @@
 		<div class="wherecon">
 			<h2>SABÉS LO QUE QUERÉS</h2>
 			<p>Quiero ayudarte a llevarlo a cabo. Contactame.</p>
-			<a href="#">¿DÓNDE ME ENCONTRÁS?</a>
+			<div class="wherebutton">
+				<a href="#">¿DÓNDE ME ENCONTRÁS?</a>
+			</div>	
 		</div>
 	</div>
 	<footer>
