index body ready

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 		</div>
 		<div class="whobox">
 			<h2>MI NOMBRE ES JONATAN LIPNER...</h2>
-			<div class="whotext">
+			<div class="bodytext">
 				<p>Soy un diseñador y desarrollador que vive en la Ciudad de Buenos Aires.
 					Me apasionan el diseño y la tecnología, pero también el cine, 
 					los cómics, los videojuegos y la literatura.
 					Si querés conocerme mejor, podés preguntarme...
 				</p>
 			</div>	
-			<a href="#">¿QUIÉN SOY?</a>
+			<a href="pages/who.html">¿QUIÉN SOY?</a>
 		</div>
 		<div class="howbox">
 			<h2>...DISEÑO...</h2>
@@ -58,22 +58,28 @@
 				
 				</div>
 			</div>
-			<p>Si querés saber más sobre mis habilidades,<br>
-			podés preguntarme.</p>
-			<a href="#">¿CÓMO TRABAJO?</a>
+			<div class="bodytext">
+				<p>Si querés saber más sobre mis habilidades,<br>
+				podés preguntarme.</p>
+			</div>	
+			<a href="pages/how.html">¿CÓMO TRABAJO?</a>
 		</div>
 		<div class="whatbox">
 			<h2>...PARA HACER REALIDAD TU SITIO.</h2>
 			<p></p>
-			<p>Hay más historias esperando que las conozcas.<br> 
+			<div class="bodytext">
+				<p>Hay más historias esperando que las conozcas.<br> 
 			Si querés conocer mi trabajo, preguntarme.</p>
-			<a href="#">¿QUÉ HAGO?</a>	
+			</div>
+			<a href="pages/what.html">¿QUÉ HAGO?</a>	
 		</div>
 		<div class="wherecon">
 			<h2>SABÉS LO QUE QUERÉS</h2>
-			<p>Quiero ayudarte a llevarlo a cabo. Contactame.</p>
+			<div class="bodytext">
+				<p>Quiero ayudarte a llevarlo a cabo. Contactame.</p>
+			</div>
 			<div class="wherebutton">
-				<a href="#">¿DÓNDE ME ENCONTRÁS?</a>
+				<a href="pages/where.html">¿DÓNDE ME ENCONTRÁS?</a>
 			</div>	
 		</div>
 	</div>
@@ -88,6 +94,7 @@
 					<li><a href="pages/where.html">Dónde</a></li>
 				</ul>
 			</div>
+			<p>&copy; 2017 | Diseño y desarrollo: Jonatan Lipner</p>
 		</div>
 	</footer>
 </body>
