--- a/pages/how.html
+++ b/pages/how.html
@@ -2,11 +2,24 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8">
+	<link rel="icon" type="image/png" href="img/favico.png">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto:400,400i" rel="stylesheet"> 
+	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 	<title>Cómo</title>
 </head>
 <body class="how">
 	<header>
-		
+		<div class="head">
+			<nav>
+				<ul>
+					<li><a href="what.html">Qué</a></li>
+					<li><a href="how.html">Cómo</a></li>
+					<li><a href="../index.html"><img src="../img/logo.png"></a></li>
+					<li><a href="who.html">Quién</a></li>
+					<li><a href="where.html">Dónde</a></li>
+				</ul>
+			</nav>
+		</div>
 	</header>
 	<div class="container">
 		<div class="introcon">
