--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="icon" type="image/png" href="img/favico.png">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto:400,400i" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Cabin:400,400i" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 	<title>Jonatan Lipner Web</title>
 </head>
