--- a/pages/where.html
+++ b/pages/where.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<link rel="icon" type="image/png" href="img/favico.png">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto:400,400i" rel="stylesheet"> 
-	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+	<link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
 	<title>Dónde</title>
 </head>
 <body class="where">
@@ -29,14 +29,24 @@
 			<div class="formbox">
 				
 			</div>
-			
 		</div>
 		<div class="socialcon">
 			
 		</div>
 	</div>
 	<footer>
-	
+		<div class="foot">
+			<div class="footnav">
+				<ul>
+					<li><a href="what.html">Qué</a></li>
+					<li><a href="how.html">Cómo</a></li>
+					<li><a href="../index.html"><img src="../img/logo.png"></a></li>
+					<li><a href="who.html">Quién</a></li>
+					<li><a href="where.html">Dónde</a></li>
+				</ul>
+			</div>
+			<p>&copy; 2017 | Diseño y desarrollo: Jonatan Lipner</p>
+		</div>
 	</footer>
 </body>
 </html>
