--- a/pages/how.html
+++ b/pages/how.html
@@ -4,13 +4,14 @@
 	<meta charset="utf-8">
 	<link rel="icon" type="image/png" href="img/favico.png">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto:400,400i" rel="stylesheet"> 
-	<link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
+	<link rel="stylesheet" type="text/css" href="../stylesheets/general.css">
+	<link rel="stylesheet" type="text/css" href="../stylesheets/pages.css">
 	<title>Cómo</title>
 </head>
 <body class="how">
 	<header>
 		<div class="head">
-			<nav>
+			<nav class="menu">
 				<ul>
 					<li><a href="what.html">Qué</a></li>
 					<li><a href="how.html">Cómo</a></li>
@@ -25,7 +26,7 @@
 		<div class="introcon">
 			
 		</div>
-		<div class="whobox">
+		<div class="levelone whobox">
 			<h2>MI NOMBRE ES JONATAN LIPNER...</h2>
 			<div class="bodytext">
 				<p>Soy un diseñador y desarrollador que vive en la Ciudad de Buenos Aires.
@@ -35,10 +36,10 @@
 				</p>
 			</div>	
 		</div>
-		<div class="howbox">
-			<h2></h2>	
+		<div class="levelthree howbox">
+			<h2>HABILIDADES</h2>	
 		</div>
-		<div class="magicbox left">
+		<div class="leveltwo magicbox left">
 			<div class="outer">
 				<div class="inner">
 					
@@ -72,10 +73,10 @@
 				</div>
 			</div>			
 		</div>
-		<div class="howbox">
-			<h2></h2>	
+		<div class="levelthree howbox">
+			<h2>HERRAMIENTAS</h2>	
 		</div>
-		<div class="magicbox left">
+		<div class="leveltwo magicbox left">
 			<div class="outer">
 				<div class="inner">
 					
@@ -121,7 +122,7 @@
 	</div>
 	<footer>
 		<div class="foot">
-			<div class="footnav">
+			<nav class="footnav">
 				<ul>
 					<li><a href="what.html">Qué</a></li>
 					<li><a href="how.html">Cómo</a></li>
@@ -129,7 +130,7 @@
 					<li><a href="who.html">Quién</a></li>
 					<li><a href="where.html">Dónde</a></li>
 				</ul>
-			</div>
+			</nav>
 			<p>&copy; 2017 | Diseño y desarrollo: Jonatan Lipner</p>
 		</div>
 	</footer>
