--- a/pages/what.html
+++ b/pages/what.html
@@ -4,13 +4,14 @@
 	<meta charset="utf-8">
 	<link rel="icon" type="image/png" href="img/favico.png">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto:400,400i" rel="stylesheet"> 
-	<link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
+	<link rel="stylesheet" type="text/css" href="../stylesheets/general.css">
+	<link rel="stylesheet" type="text/css" href="../stylesheets/pages.css">
 	<title>Qué</title>
 </head>
 <body class="what">
 	<header>
 		<div class="head">
-			<nav>
+			<nav class="menu">
 				<ul>
 					<li><a href="what.html">Qué</a></li>
 					<li><a href="how.html">Cómo</a></li>
@@ -25,7 +26,7 @@
 		<div class="introcon">
 			
 		</div>
-		<div class="whobox">
+		<div class="levelone whobox">
 			<h2>MI NOMBRE ES JONATAN LIPNER...</h2>
 			<div class="bodytext">
 				<p>Soy un diseñador y desarrollador que vive en la Ciudad de Buenos Aires.
@@ -35,8 +36,8 @@
 				</p>
 			</div>		
 		</div>			
-		<div class="howbox">
-			<div class="footnav">
+		<div class="levelthree howbox">
+			<nav class="carrousample">
 				<ul>
 					<li><a href="what.html">Qué</a></li>
 					<li><a href="how.html">Cómo</a></li>
@@ -44,14 +45,14 @@
 					<li><a href="who.html">Quién</a></li>
 					<li><a href="where.html">Dónde</a></li>
 				</ul>
-			</div>	
+			</nav>	
 		</div>			
-		<div class="descriptcon">
+		<div class="leveltwo descriptcon">
 			<div class="descriptimg">
-				<div class="sample">
+				<nav class="sample">
 					
 				</div>
-				<div class="footnav">
+				<nav class="sampleviews">
 					<ul>
 						<li><a href="what.html">Qué</a></li>
 						<li><a href="how.html">Cómo</a></li>
@@ -59,7 +60,7 @@
 						<li><a href="who.html">Quién</a></li>
 						<li><a href="where.html">Dónde</a></li>
 					</ul>
-				</div>	
+				</nav>	
 			</div>
 			<div class="descriptbox">
 				<div class="descript">
@@ -79,7 +80,7 @@
 	</div>
 	<footer>
 		<div class="foot">
-			<div class="footnav">
+			<nav class="footnav">
 				<ul>
 					<li><a href="what.html">Qué</a></li>
 					<li><a href="how.html">Cómo</a></li>
