--- a/pages/where.html
+++ b/pages/where.html
@@ -4,13 +4,14 @@
 	<meta charset="utf-8">
 	<link rel="icon" type="image/png" href="img/favico.png">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto:400,400i" rel="stylesheet"> 
-	<link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
+	<link rel="stylesheet" type="text/css" href="../stylesheets/general.css">
+	<link rel="stylesheet" type="text/css" href="../stylesheets/pages.css">
 	<title>Dónde</title>
 </head>
 <body class="where">
 	<header>
 		<div class="head">
-			<nav>
+			<nav class="menu">
 				<ul>
 					<li><a href="what.html">Qué</a></li>
 					<li><a href="how.html">Cómo</a></li>
@@ -25,7 +26,7 @@
 		<div class="introcon">
 			
 		</div>
-		<div class="formcon">
+		<div class="levelone formcon">
 			<div class="formbox">
 				
 			</div>
@@ -36,7 +37,7 @@
 	</div>
 	<footer>
 		<div class="foot">
-			<div class="footnav">
+			<nav class="footnav">
 				<ul>
 					<li><a href="what.html">Qué</a></li>
 					<li><a href="how.html">Cómo</a></li>
@@ -44,7 +45,7 @@
 					<li><a href="who.html">Quién</a></li>
 					<li><a href="where.html">Dónde</a></li>
 				</ul>
-			</div>
+			</nav>
 			<p>&copy; 2017 | Diseño y desarrollo: Jonatan Lipner</p>
 		</div>
 	</footer>
