--- a/pages/who.html
+++ b/pages/who.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="icon" type="image/png" href="img/favico.png">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto:400,400i" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Cabin:400,400i" rel="stylesheet">  
 	<link rel="stylesheet" type="text/css" href="../stylesheets/general.css">
 	<link rel="stylesheet" type="text/css" href="../stylesheets/pages.css">
 	<title>Quién</title>
