--- a/pages/what.html
+++ b/pages/what.html
@@ -72,7 +72,7 @@ My money's in that office, right? If she start giving me some bullshit about it 
 				</div>	
 			</div>
 		</div>
-		<div class="wherecon">
+		<div class="levelone wherecon">
 			<h2>YA SABÉS QUÉ HAGO</h2>
 			<div class="bodytext">
 				<p>Sumate a las personas que vieron su sitio hecho realidad</p>
