--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	</header>
 	<div class="container">
 		<div class="introcon">
+			<img src="img/index/cover2.jpg">
 			<div class="poemcon">
 				<p>
 					"Cuando oí al docto astrónomo, cuando las pruebas, las figuras, distribuidas en columnas ante mí, cuando me presentaron los gráficos y diagramas para sumarlos, dividirlos y medirlos, cuando sentado oí al astrónomo en la sala de lectura donde daba su conferencia entre muchos aplausos, cuán pronto e inexplicablemente me sentí cansado y harto; hasta que me levanté y me escabullí para deambular por mi cuenta, en el místico aire húmedo de la noche, y de tanto en tanto, contemplaba en perfecto silencio las estrellas."
@@ -51,13 +52,13 @@
 					<nav class="indexdev">
 						<ul>
 							<li>
-								<div class="indexdevchild">
+								<div class="indexdevchild"></div>
 							</li>
 							<li>
-								<div class="indexdevchild">
+								<div class="indexdevchild"></div>
 							</li>
 							<li>
-								<div class="indexdevchild">
+								<div class="indexdevchild"></div>
 							</li>
 						</ul>
 					</nav>
@@ -69,13 +70,13 @@
 					<nav class="indexdev">
 						<ul>
 							<li>
-								<div class="indexdevchild">
+								<div class="indexdevchild"></div>
 							</li>
 							<li>
-								<div class="indexdevchild">
+								<div class="indexdevchild"></div>
 							</li>
 							<li>
-								<div class="indexdevchild">
+								<div class="indexdevchild"></div>
 							</li>
 						</ul>
 					</nav>
