--- a/pages/what.html
+++ b/pages/what.html
@@ -41,7 +41,7 @@
 				<ul>
 					<li><a href="what.html">Qué</a></li>
 					<li><a href="how.html">Cómo</a></li>
-					<li><a href="../index.html"><img src="../img/logo.png"></a></li>
+					<li><a href="../index.html">Enlace</a></li>
 					<li><a href="who.html">Quién</a></li>
 					<li><a href="where.html">Dónde</a></li>
 				</ul>
@@ -56,7 +56,7 @@
 					<ul>
 						<li><a href="what.html">Qué</a></li>
 						<li><a href="how.html">Cómo</a></li>
-						<li><a href="../index.html"><img src="../img/logo.png"></a></li>
+						<li><a href="../index.html">Enlace</a></li>
 						<li><a href="who.html">Quién</a></li>
 						<li><a href="where.html">Dónde</a></li>
 					</ul>
