--- a/pages/who.html
+++ b/pages/who.html
@@ -34,7 +34,7 @@
 				
 			</div>	
 		</div>
-		<div class="levelthree funcon">
+		<div class="leveltwo funcon">
 			<div class="funbox">
 				<nav class="funfacts">
 					<ul>
