--- a/pages/how.html
+++ b/pages/how.html
@@ -36,10 +36,10 @@
 				</p>
 			</div>	
 		</div>
+		<div class="leveltwo howbox">
+			<h2>HABILIDADES</h2>	
+		</div>
 		<div class="levelone magicboxcon">
-			<div class="leveltwo howbox">
-				<h2>HABILIDADES</h2>	
-			</div>
 			<div class="leveltwo magicbox left">
 				<h3>DISEÑO</h3>
 				<div class="outer">
@@ -76,9 +76,11 @@
 					</div>
 				</div>			
 			</div>
-			<div class="leveltwo howbox">
-				<h2>HERRAMIENTAS</h2>	
-			</div>
+		</div>
+		<div class="leveltwo howbox">
+			<h2>HERRAMIENTAS</h2>	
+		</div>
+		<div class="levelone magicboxcon">
 			<div class="leveltwo magicbox left">
 				<h3>DISEÑO</h3>
 				<div class="outer">
