--- a/pages/received.html
+++ b/pages/received.html
@@ -27,6 +27,9 @@
 			
 		</div>
 		<div class="levelone formcon">
+			<div class="levelthree received">
+				<p>¡Gracias por ponerte en contacto! Te voy a estar contestando lo más pronto posible</p>
+			</div>
 			<h2>TU MENSAJE</h2>
 			<div class="formbox">
 				<form action="received.html" method="post">
