--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/pages.css">
 	<title>Jonatan Lipner Web</title>
 </head>
-<body>
+<body class="index">
 	<header>
 		<div class="head">
 			<nav class="menu">
@@ -24,14 +24,15 @@
 	</header>
 	<div class="container">
 		<div class="introcon">
-			<img src="img/index/cover2.jpg">
-			<div class="poemcon">
-				<p>
-					"Cuando oí al docto astrónomo, cuando las pruebas, las figuras, distribuidas en columnas ante mí, cuando me presentaron los gráficos y diagramas para sumarlos, dividirlos y medirlos, cuando sentado oí al astrónomo en la sala de lectura donde daba su conferencia entre muchos aplausos, cuán pronto e inexplicablemente me sentí cansado y harto; hasta que me levanté y me escabullí para deambular por mi cuenta, en el místico aire húmedo de la noche, y de tanto en tanto, contemplaba en perfecto silencio las estrellas."
-				</p>
-			</div>
 			<div class="intro">
-				<h1>NO LE PONGAS MEDIDA A TUS IDEAS</h1>
+				<div class="poemcon">
+					<p>
+						"Cuando oí al docto astrónomo, cuando las pruebas, las figuras, distribuidas en columnas ante mí, cuando me presentaron los gráficos y diagramas para sumarlos, dividirlos y medirlos, cuando sentado oí al astrónomo en la sala de lectura donde daba su conferencia entre muchos aplausos, cuán pronto e inexplicablemente me sentí cansado y harto; hasta que me levanté y me escabullí para deambular por mi cuenta, en el místico aire húmedo de la noche, y de tanto en tanto, contemplaba en perfecto silencio las estrellas."
+					</p>
+				</div>
+				<div class="introtag">
+					<h1>NO LE PONGAS MEDIDA A TUS IDEAS</h1>
+				</div>
 			</div>
 		</div>
 		<div class="levelone whobox">
@@ -90,7 +91,12 @@
 		</div>
 		<div class="levelone whatbox">
 			<h2>...PARA HACER REALIDAD TU SITIO.</h2>
-			<p></p>
+			<p>Estos proyectos ya vieron la luz</p>
+			<div class="projects">
+				<img src="img/samples/sites/sitefive.png">
+				<img src="img/samples/sites/sitefour.png">
+				<img src="img/samples/sites/sitetwo.png">
+			</div>
 			<div class="bodytext">
 				<p>Hay más historias esperando que las conozcas.<br> 
 			Si querés conocer mi trabajo, preguntarme.</p>
