--- a/pages/what.html
+++ b/pages/what.html
@@ -24,7 +24,11 @@
 	</header>
 	<div class="container">
 		<div class="introcon">
-			
+			<div class="intro">
+				<div class="introtag">
+					<h1>¿QUÉ HAGO?</h1>
+				</div>
+			</div>
 		</div>
 		<div class="levelone whobox">
 			<h2>MI NOMBRE ES JONATAN LIPNER...</h2>
@@ -37,38 +41,56 @@
 			</div>		
 		</div>			
 		<div class="leveltwo howbox">
+			<h2>LOS PROYECTOS</h2>
 			<nav class="carrousample">
 				<ul>
-					<li><a href="what.html">Qué</a></li>
-					<li><a href="how.html">Cómo</a></li>
-					<li><a href="../index.html">Enlace</a></li>
-					<li><a href="who.html">Quién</a></li>
-					<li><a href="where.html">Dónde</a></li>
+					<li>
+						<div class="sitebox">
+							<img src="../img/samples/logos/sampleone.png">
+						</div>
+					</li>
+					<li>
+						<div class="carrousampleimg">
+							<img src="../img/samples/logos/sampletwo.png">
+						</div>
+					</li>
+					<li>
+						<div class="carrousampleimg">
+							<img src="../img/samples/logos/samplethree.png">
+						</div>
+					</li>
+					<li>
+						<div class="carrousampleimg">
+							<img src="../img/samples/logos/samplefour.png">
+						</div>
+					</li>
+					<li>
+						<div class="carrousampleimg">
+							<img src="../img/samples/logos/samplefive.png">
+						</div>
+					</li>
 				</ul>
 			</nav>	
 		</div>			
 		<div class="leveltwo descriptcon">
+			<h2>GIBSON.COM</h2>
 			<div class="descriptimg">
 				<div class="sample">
-					<img src="../img/example.jpg"/>
+					<img src="../img/samples/sites/sitethree.png">
 				</div>
 				<nav class="sampleviews">
 					<ul>
-						<li><a href="what.html">Qué</a></li>
-						<li><a href="how.html">Cómo</a></li>
-						<li><a href="../index.html">Enlace</a></li>
-						<li><a href="who.html">Quién</a></li>
-						<li><a href="where.html">Dónde</a></li>
+						<li>Vista 1</li>
+						<li>Vista 2</li>
+						<li>Vista 3</li>
 					</ul>
 				</nav>	
 			</div>
 			<div class="descriptbox">
 				<div class="descript">
-					<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
+					<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?<br>
 
-The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.
-
-My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch in the kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm talking to you, motherfucker. You listen: we go in there, and that nigga Winston or anybody else is in there, you the first motherfucker to get shot. You understand?</p>
+					The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
 				</div>	
 			</div>
 		</div>
