--- a/pages/where.html
+++ b/pages/where.html
@@ -24,7 +24,11 @@
 	</header>
 	<div class="container">
 		<div class="introcon">
-			
+			<div class="intro">
+				<div class="introtag">
+					<h1>¿DÓNDE ME ENCONTRÁS?</h1>
+				</div>
+			</div>
 		</div>
 		<div class="levelone formcon">
 			<h2>TU MENSAJE</h2>
@@ -40,17 +44,13 @@
 					</div>
 					<div class="themessage left">
 						<p>¿Qué me querés decir?</p>
-						<textarea class="msg" name="message" placeholder="Una palabra a la vez...">						
-						</textarea>
+						<textarea class="msg" name="message" placeholder="Una palabra a la vez..."></textarea>
 					</div>
 					<div class="submit">
 						<input type="submit" value="ENVIAR">
 					</div>
 				</form>
 			</div>
-		</div>
-		<div class="levelthree socialcon">
-			
 		</div>
 	</div>
 	<footer>
