--- a/pages/who.html
+++ b/pages/who.html
@@ -24,19 +24,26 @@
 	</header>
 	<div class="container">
 		<div class="introcon">
-			
+			<div class="intro">
+				<div class="introtag">
+					<h1>¿QUIÉN SOY?</h1>
+				</div>
+			</div>
 		</div>
 		<div class="levelone biobox">
-			<div class="photo left">
-				
+			<h2>ESTE SOY YO</h2>
+			<div class="photobox left">
+				<div class="photo">
+					<img src="../img/who/me.jpg">
+				</div>				
 			</div>
 			<div class="bio right">
 				<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
-
-				The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
+				</p>
 			</div>	
 		</div>
 		<div class="leveltwo funcon">
+			<h2>¡FUN FACTS!</h2>
 			<div class="funbox">
 				<nav class="funfacts">
 					<ul>
@@ -95,7 +102,8 @@
 					<p>2008</p>
 				</div>
 				<div class="hit">
-
+					<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
+					</p>
 				</div>
 			</div>
 			<div class="hitbox">
@@ -103,7 +111,9 @@
 					<p>2012</p>
 				</div>
 				<div class="hit">
+					<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
 
+					The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will</p>
 				</div>
 			</div>
 			<div class="hitbox">
@@ -111,7 +121,9 @@
 					<p>2013</p>
 				</div>
 				<div class="hit">
+					<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
 
+					The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children.</p>
 				</div>
 			</div>
 			<div class="hitbox">
@@ -119,7 +131,9 @@
 					<p>2015</p>
 				</div>
 				<div class="hit">
+					<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
 
+					The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men.</p>
 				</div>
 			</div>
 			<div class="hitbox">
@@ -127,7 +141,7 @@
 					<p>2016</p>
 				</div>
 				<div class="hit">
-
+					<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?</p>
 				</div>
 			</div>
 			<div class="hitbox">
@@ -135,7 +149,9 @@
 					<p>2017</p>
 				</div>
 				<div class="hit">
-					
+					<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
+
+					The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will</p>
 				</div>
 			</div>	
 		</div>
