--- a/pages/what.html
+++ b/pages/what.html
@@ -15,7 +15,7 @@
 				<ul>
 					<li><a href="what.html">Qué</a></li>
 					<li><a href="how.html">Cómo</a></li>
-					<li><a href="../index.html"><img src="../img/logo.png"></a></li>
+					<li><a href="../index.html"><img src="../img/logo.png" alt="Home"></a></li>
 					<li><a href="who.html">Quién</a></li>
 					<li><a href="where.html">Dónde</a></li>
 				</ul>
@@ -46,27 +46,27 @@
 				<ul>
 					<li>
 						<div class="sitebox">
-							<img src="../img/samples/logos/sampleone.png">
+							<img src="../img/samples/logos/sampleone.png" alt="Logo uno">
 						</div>
 					</li>
 					<li>
 						<div class="carrousampleimg">
-							<img src="../img/samples/logos/sampletwo.png">
+							<img src="../img/samples/logos/sampletwo.png" alt="Logo dos">
 						</div>
 					</li>
 					<li>
 						<div class="carrousampleimg">
-							<img src="../img/samples/logos/samplethree.png">
+							<img src="../img/samples/logos/samplethree.png" alt="Logo tres">
 						</div>
 					</li>
 					<li>
 						<div class="carrousampleimg">
-							<img src="../img/samples/logos/samplefour.png">
+							<img src="../img/samples/logos/samplefour.png" alt="Logo cuatro">
 						</div>
 					</li>
 					<li>
 						<div class="carrousampleimg">
-							<img src="../img/samples/logos/samplefive.png">
+							<img src="../img/samples/logos/samplefive.png" alt="Logo cinco">
 						</div>
 					</li>
 				</ul>
@@ -76,7 +76,7 @@
 			<h2>GIBSON.COM</h2>
 			<div class="descriptimg">
 				<div class="sample">
-					<img src="../img/samples/sites/sitethree.png">
+					<img src="../img/samples/sites/sitethree.png" alt="Imagen sitio">
 				</div>
 				<nav class="sampleviews">
 					<ul>
@@ -110,11 +110,11 @@
 				<ul>
 					<li><a href="what.html">Qué</a></li>
 					<li><a href="how.html">Cómo</a></li>
-					<li><a href="../index.html"><img src="../img/logo.png"></a></li>
+					<li><a href="../index.html"><img src="../img/logo.png" alt="Home"></a></li>
 					<li><a href="who.html">Quién</a></li>
 					<li><a href="where.html">Dónde</a></li>
 				</ul>
-			</div>
+			</nav>
 			<p>&copy; 2017 | Diseño y desarrollo: Jonatan Lipner</p>
 		</div>
 	</footer>
