--- a/pages/where.html
+++ b/pages/where.html
@@ -15,7 +15,7 @@
 				<ul>
 					<li><a href="what.html">Qué</a></li>
 					<li><a href="how.html">Cómo</a></li>
-					<li><a href="../index.html"><img src="../img/logo.png"></a></li>
+					<li><a href="../index.html"><img src="../img/logo.png" alt="Home"></a></li>
 					<li><a href="who.html">Quién</a></li>
 					<li><a href="where.html">Dónde</a></li>
 				</ul>
@@ -59,7 +59,7 @@
 				<ul>
 					<li><a href="what.html">Qué</a></li>
 					<li><a href="how.html">Cómo</a></li>
-					<li><a href="../index.html"><img src="../img/logo.png"></a></li>
+					<li><a href="../index.html"><img src="../img/logo.png" alt="Home"></a></li>
 					<li><a href="who.html">Quién</a></li>
 					<li><a href="where.html">Dónde</a></li>
 				</ul>
