--- a/pages/who.html
+++ b/pages/who.html
@@ -15,7 +15,7 @@
 				<ul>
 					<li><a href="what.html">Qué</a></li>
 					<li><a href="how.html">Cómo</a></li>
-					<li><a href="../index.html"><img src="../img/logo.png"></a></li>
+					<li><a href="../index.html"><img src="../img/logo.png" alt="Home"></a></li>
 					<li><a href="who.html">Quién</a></li>
 					<li><a href="where.html">Dónde</a></li>
 				</ul>
@@ -34,7 +34,7 @@
 			<h2>ESTE SOY YO</h2>
 			<div class="photobox left">
 				<div class="photo">
-					<img src="../img/who/me.jpg">
+					<img src="../img/who/me.jpg" alt="Foto Jonatan Lipner">
 				</div>				
 			</div>
 			<div class="bio right">
@@ -171,7 +171,7 @@
 				<ul>
 					<li><a href="what.html">Qué</a></li>
 					<li><a href="how.html">Cómo</a></li>
-					<li><a href="../index.html"><img src="../img/logo.png"></a></li>
+					<li><a href="../index.html"><img src="../img/logo.png" alt="Home"></a></li>
 					<li><a href="who.html">Quién</a></li>
 					<li><a href="where.html">Dónde</a></li>
 				</ul>
