--- a/pages/how.html
+++ b/pages/how.html
@@ -11,7 +11,7 @@
 <body class="how">
 	<header>
 		<div class="head">
-			<nav class="menu">
+			<nav class="menu" id="menu">
 				<ul>
 					<li><a href="what.html">Qué</a></li>
 					<li><a href="how.html">Cómo</a></li>
@@ -122,5 +122,7 @@
 			<p>&copy; 2017 | Diseño y desarrollo: Jonatan Lipner</p>
 		</div>
 	</footer>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="../js/javascript.js"></script>
 </body>
 </html>
