--- a/index.html
+++ b/index.html
@@ -53,32 +53,41 @@
 					<nav class="indexdev">
 						<ul>
 							<li>
-								<div class="card">
-									<div class="front">
-										<img src="img/index/stepone.jpg" alt="Tomo nota de tus ideas">
-									</div>
-									<div class="back">
-										<img src="img/index/steponetext.jpg" alt="Tomo nota de tus ideas">
-									</div>
-								</div>
-							</li>
-							<li>
-								<div class="card">
-									<div class="front">
-										<img src="img/index/steptwo.jpg" alt="Hago un boceto de tu proyecto">
-									</div>
-									<div class="back">
-										<img src="img/index/steptwotext.jpg" alt="Hago un boceto de tu proyecto">
+								<div class="cardcon">
+									<p>PRIMERO</p>
+									<div class="card">
+										<div class="front">
+											<img src="img/index/stepone.jpg" alt="Tomo nota de tus ideas">
+										</div>
+										<div class="back">
+											<img src="img/index/steponetext.jpg" alt="Tomo nota de tus ideas">
+										</div>
 									</div>
 								</div>
 							</li>
 							<li>
-								<div class="card">
-									<div class="front">
-										<img src="img/index/stepthree.jpg" alt="Creo el diseño final en Photoshop">
+								<div class="cardcon">
+									<p>DESPUÉS</p>
+									<div class="card">
+										<div class="front">
+											<img src="img/index/steptwo.jpg" alt="Hago un boceto de tu proyecto">
+										</div>
+										<div class="back">
+											<img src="img/index/steptwotext.jpg" alt="Hago un boceto de tu proyecto">
+										</div>
 									</div>
-									<div class="back">
-										<img src="img/index/stepthreetext.jpg" alt="Creo el diseño final en Photoshop">
+								</div>
+							</li>
+							<li>
+								<div class="cardcon">
+									<p>ENTONCES</p>
+									<div class="card">
+										<div class="front">
+											<img src="img/index/stepthree.jpg" alt="Creo el diseño final en Photoshop">
+										</div>
+										<div class="back">
+											<img src="img/index/stepthreetext.jpg" alt="Creo el diseño final en Photoshop">
+										</div>
 									</div>
 								</div>
 							</li>
@@ -92,33 +101,41 @@
 					<nav class="indexdev">
 						<ul>
 							<li>
-								<div class="card">
-									<div class="front">
-										<img src="img/index/toolone.jpg" alt="HTML5 y CSS3 para el contenido y la forma">
+								<div class="cardcon">
+									<p>CON LO BÁSICO...</p>
+									<div class="card">
+										<div class="front">
+											<img src="img/index/toolone.jpg" alt="HTML5 y CSS3 para el contenido y la forma">
+										</div>
+										<div class="back">
+											<img src="img/index/toolonetext.jpg" alt="HTML5 y CSS3 para el contenido y la forma">
+										</div>
 									</div>
-									<div class="back">
-										<img src="img/index/toolonetext.jpg" alt="HTML5 y CSS3 para el contenido y la forma">
-									</div>
+							</li>
+							<li>
+								<div class="cardcon">
+									<p>LO MÁGICO...</p>
+									<div class="card">
+										<div class="front">
+											<img src="img/index/tooltwo.jpg" alt="Javascript para darle vida">
+										</div>
+										<div class="back">
+											<img src="img/index/tooltwotext.jpg" alt="Javascript para darle vida">
+										</div>
+									</div>	
 								</div>
 							</li>
 							<li>
-								<div class="card">
-									<div class="front">
-										<img src="img/index/tooltwo.jpg" alt="Javascript para darle vida">
-									</div>
-									<div class="back">
-										<img src="img/index/tooltwotext.jpg" alt="Javascript para darle vida">
-									</div>
-								</div>
-							</li>
-							<li>
-								<div class="card">
-									<div class="front">
-										<img src="img/index/toolthree.jpg" alt="Y lo que necesites para destacar">
-									</div>
-									<div class="back">
-										<img src="img/index/toolthreetext.jpg" alt="Y lo que necesites para destacar">
-									</div>
+								<div class="cardcon">
+									<p>Y ADEMÁS...</p>
+									<div class="card">
+										<div class="front">
+											<img src="img/index/toolthree.jpg" alt="Y lo que necesites para destacar">
+										</div>
+										<div class="back">
+											<img src="img/index/toolthreetext.jpg" alt="Y lo que necesites para destacar">
+										</div>
+									</div>	
 								</div>
 							</li>
 						</ul>
