--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 											<img src="img/index/toolonetext.jpg" alt="HTML5 y CSS3 para el contenido y la forma">
 										</div>
 									</div>
+								</div>
 							</li>
 							<li>
 								<div class="cardcon">
