--- a/pages/what.html
+++ b/pages/what.html
@@ -77,10 +77,10 @@
 			<div class="descriptimg">
 				<div class="sample">
 					<img class='img selected' data-project='key' src="../img/samples/sites/sitethree.png" alt="Imagen sitio">
-					<img class='img' data-project='bee' src="../img/samples/sites/sitesix.png">
-					<img class='img' data-project='crow' src="../img/samples/sites/sitetwo.png">
-					<img class='img' data-project='fox' src="../img/samples/sites/sitefour.png">
-					<img class='img' data-project='polygon' src="../img/samples/sites/sitefive.png">
+					<img class='img' data-project='bee' src="../img/samples/sites/sitesix.png" alt="Imagen sitio">
+					<img class='img' data-project='crow' src="../img/samples/sites/sitetwo.png" alt="Imagen sitio">
+					<img class='img' data-project='fox' src="../img/samples/sites/sitefour.png" alt="Imagen sitio">
+					<img class='img' data-project='polygon' src="../img/samples/sites/sitefive.png" alt="Imagen sitio">
 				</div>
 				<nav class="sampleviews">
 					<ul>
