--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Cabin:400,400i" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="stylesheets/general.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/pages.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/mobile.css">
 	<title>Jonatan Lipner Web</title>
 </head>
 <body class="index">
