--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="icon" type="image/png" href="img/favico.png">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Cabin:400,400i" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="stylesheets/general.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/pages.css">
