--- a/index.html
+++ b/index.html
@@ -159,6 +159,22 @@
 				<img src="img/samples/sites/sitefour.png" alt="Sitio dos">
 				<img src="img/samples/sites/sitetwo.png" alt="Sitio tres">
 			</div>
+			<div class="descriptimg">
+				<div class="sample">
+					<img class='img selected' data-project='key' src="../img/samples/sites/sitethree.png" alt="Imagen sitio">
+					<img class='img' data-project='bee' src="../img/samples/sites/sitesix.png" alt="Imagen sitio">
+					<img class='img' data-project='crow' src="../img/samples/sites/sitetwo.png" alt="Imagen sitio">
+					<img class='img' data-project='fox' src="../img/samples/sites/sitefour.png" alt="Imagen sitio">
+					<img class='img' data-project='polygon' src="../img/samples/sites/sitefive.png" alt="Imagen sitio">
+				</div>
+				<nav class="sampleviews">
+					<ul>
+						<li class="button selected" data-project='fox'>Vista 1</li>
+						<li class="button" data-project='bee'>Vista 2</li>
+						<li class="button" data-project='crow'>Vista 3</li>
+					</ul>
+				</nav>	
+			</div>
 			<div class="bodytext">
 				<p>Hay más historias esperando que las conozcas.<br> 
 			Si querés conocer mi trabajo, preguntarme.</p>
@@ -192,5 +208,6 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="js/javascript.js"></script>
+	<script src="js/select.js"></script>
 </body>
 </html> 
