--- a/index.html
+++ b/index.html
@@ -159,6 +159,15 @@
 				<img src="img/samples/sites/sitefour.png" alt="Sitio dos">
 				<img src="img/samples/sites/sitetwo.png" alt="Sitio tres">
 			</div>
+			<div class="bodytext">
+				<p>Hay más historias esperando que las conozcas.<br> 
+			Si querés conocer mi trabajo, preguntarme.</p>
+			</div>
+			<a href="pages/what.html">¿QUÉ HAGO?</a>	
+		</div>
+		<div class="levelone mobiwhatbox">
+			<h2>...PARA HACER REALIDAD TU SITIO.</h2>
+			<p>Estos proyectos ya vieron la luz</p>
 			<div class="descriptimg">
 				<div class="sample">
 					<img class='img selected' data-project='key' src="../img/samples/sites/sitethree.png" alt="Imagen sitio">
@@ -208,6 +217,5 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="js/javascript.js"></script>
-	<script src="js/select.js"></script>
 </body>
 </html> 
