--- a/index.html
+++ b/index.html
@@ -217,5 +217,6 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="js/javascript.js"></script>
+	<script src='js/select.js'></script>
 </body>
 </html> 
